--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,8 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
+PiezasCarcassonne/
+Carcassonne/Library
+Carcassonne/Logs
+Carcassonne/Packages
+Carcassonne/ProjectSettings
